--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "next": "9.5.2",
+    "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
