--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "movie-app",
-  "version": "1.0.2",
+  "name": "nextflix",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "dev": "node server/index.js",
